fix spacing between logo and lines in footer #561

--- a/assets/sass/organisms/_footer.scss
+++ b/assets/sass/organisms/_footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   position: relative;
-  padding: ($spacer * 3) 0;
+  padding: ($spacer * 3) 0 ($spacer * 2);
   background-image: url(../svg/bars_black.svg);
   background-repeat: repeat-x;
   background-position: center bottom;
